src/interp/snapshots/rsh__interp__parse__test__parser_command_sub.snap
---
source: src/interp/parse.rs
expression: flat_nodes
---
[
    Node {
        command: Some(
            Tk {
                tk_type: Ident,
                wd: WordDesc {
                    text: "echo",
                    span: Span {
                        start: 0,
                        end: 4,
                    },
                    flags: WdFlags(
                        BUILTIN,
                    ),
                },
            },
        ),
        nd_type: Builtin {
            argv: [
                Tk {
                    tk_type: Ident,
                    wd: WordDesc {
                        text: "echo",
                        span: Span {
                            start: 0,
                            end: 4,
                        },
                        flags: WdFlags(
                            BUILTIN,
                        ),
                    },
                },
                Tk {
                    tk_type: String,
                    wd: WordDesc {
                        text: "hi",
                        span: Span {
                            start: 5,
                            end: 15,
                        },
                        flags: WdFlags(
                            0x0,
                        ),
                    },
                },
            ],
        },
        span: Span {
            start: 0,
            end: 15,
        },
        flags: NdFlags(
            VALID_OPERAND,
        ),
        redirs: [],
    },
]
