src/interp/snapshots/rsh__interp__parse__test__parser_if_statement.snap
---
source: src/interp/parse.rs
expression: flat_nodes
---
[
    Node {
        command: None,
        nd_type: If {
            cond_blocks: [
                Conditional {
                    condition: Node {
                        command: None,
                        nd_type: Root {
                            deck: [
                                Node {
                                    command: Some(
                                        Tk {
                                            tk_type: Ident,
                                            wd: WordDesc {
                                                text: "true",
                                                span: Span {
                                                    start: 3,
                                                    end: 7,
                                                },
                                                flags: WdFlags(
                                                    0x0,
                                                ),
                                            },
                                        },
                                    ),
                                    nd_type: Command {
                                        argv: [
                                            Tk {
                                                tk_type: Ident,
                                                wd: WordDesc {
                                                    text: "true",
                                                    span: Span {
                                                        start: 3,
                                                        end: 7,
                                                    },
                                                    flags: WdFlags(
                                                        0x0,
                                                    ),
                                                },
                                            },
                                        ],
                                    },
                                    span: Span {
                                        start: 3,
                                        end: 7,
                                    },
                                    flags: NdFlags(
                                        VALID_OPERAND,
                                    ),
                                    redirs: [],
                                },
                            ],
                        },
                        span: Span {
                            start: 3,
                            end: 0,
                        },
                        flags: NdFlags(
                            0x0,
                        ),
                        redirs: [],
                    },
                    body: Node {
                        command: None,
                        nd_type: Root {
                            deck: [
                                Node {
                                    command: Some(
                                        Tk {
                                            tk_type: Ident,
                                            wd: WordDesc {
                                                text: "echo",
                                                span: Span {
                                                    start: 13,
                                                    end: 17,
                                                },
                                                flags: WdFlags(
                                                    BUILTIN,
                                                ),
                                            },
                                        },
                                    ),
                                    nd_type: Builtin {
                                        argv: [
                                            Tk {
                                                tk_type: Ident,
                                                wd: WordDesc {
                                                    text: "echo",
                                                    span: Span {
                                                        start: 13,
                                                        end: 17,
                                                    },
                                                    flags: WdFlags(
                                                        BUILTIN,
                                                    ),
                                                },
                                            },
                                            Tk {
                                                tk_type: String,
                                                wd: WordDesc {
                                                    text: "hi",
                                                    span: Span {
                                                        start: 18,
                                                        end: 20,
                                                    },
                                                    flags: WdFlags(
                                                        IS_ARG,
                                                    ),
                                                },
                                            },
                                        ],
                                    },
                                    span: Span {
                                        start: 13,
                                        end: 20,
                                    },
                                    flags: NdFlags(
                                        VALID_OPERAND,
                                    ),
                                    redirs: [],
                                },
                            ],
                        },
                        span: Span {
                            start: 13,
                            end: 0,
                        },
                        flags: NdFlags(
                            0x0,
                        ),
                        redirs: [],
                    },
                },
            ],
            else_block: Some(
                Node {
                    command: None,
                    nd_type: Root {
                        deck: [
                            Node {
                                command: Some(
                                    Tk {
                                        tk_type: Ident,
                                        wd: WordDesc {
                                            text: "echo",
                                            span: Span {
                                                start: 26,
                                                end: 30,
                                            },
                                            flags: WdFlags(
                                                BUILTIN,
                                            ),
                                        },
                                    },
                                ),
                                nd_type: Builtin {
                                    argv: [
                                        Tk {
                                            tk_type: Ident,
                                            wd: WordDesc {
                                                text: "echo",
                                                span: Span {
                                                    start: 26,
                                                    end: 30,
                                                },
                                                flags: WdFlags(
                                                    BUILTIN,
                                                ),
                                            },
                                        },
                                        Tk {
                                            tk_type: String,
                                            wd: WordDesc {
                                                text: "bye",
                                                span: Span {
                                                    start: 31,
                                                    end: 34,
                                                },
                                                flags: WdFlags(
                                                    IS_ARG,
                                                ),
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 26,
                                    end: 34,
                                },
                                flags: NdFlags(
                                    VALID_OPERAND,
                                ),
                                redirs: [],
                            },
                        ],
                    },
                    span: Span {
                        start: 26,
                        end: 0,
                    },
                    flags: NdFlags(
                        0x0,
                    ),
                    redirs: [],
                },
            ),
        },
        span: Span {
            start: 0,
            end: 37,
        },
        flags: NdFlags(
            VALID_OPERAND,
        ),
        redirs: [],
    },
]
