src/interp/snapshots/rsh__interp__parse__test__parser_multiple_args.snap
---
source: src/interp/parse.rs
expression: flat_nodes
---
[
    Node {
        command: Some(
            Tk {
                tk_type: Ident,
                wd: WordDesc {
                    text: "ls",
                    span: Span {
                        start: 0,
                        end: 2,
                    },
                    flags: WdFlags(
                        0x0,
                    ),
                },
            },
        ),
        nd_type: Command {
            argv: [
                Tk {
                    tk_type: Ident,
                    wd: WordDesc {
                        text: "ls",
                        span: Span {
                            start: 0,
                            end: 2,
                        },
                        flags: WdFlags(
                            0x0,
                        ),
                    },
                },
                Tk {
                    tk_type: String,
                    wd: WordDesc {
                        text: "-l",
                        span: Span {
                            start: 3,
                            end: 5,
                        },
                        flags: WdFlags(
                            IS_ARG,
                        ),
                    },
                },
                Tk {
                    tk_type: String,
                    wd: WordDesc {
                        text: "/home/user",
                        span: Span {
                            start: 6,
                            end: 16,
                        },
                        flags: WdFlags(
                            IS_ARG,
                        ),
                    },
                },
            ],
        },
        span: Span {
            start: 0,
            end: 16,
        },
        flags: NdFlags(
            VALID_OPERAND,
        ),
        redirs: [],
    },
]
