src/interp/snapshots/rsh__interp__parse__test__parser_simple.snap
---
source: src/interp/parse.rs
expression: flat_nodes
---
[
    Node {
        command: Some(
            Tk {
                tk_type: Ident,
                wd: WordDesc {
                    text: "echo",
                    span: Span {
                        start: 0,
                        end: 4,
                    },
                    flags: WdFlags(
                        BUILTIN,
                    ),
                },
            },
        ),
        nd_type: Builtin {
            argv: [
                Tk {
                    tk_type: Ident,
                    wd: WordDesc {
                        text: "echo",
                        span: Span {
                            start: 0,
                            end: 4,
                        },
                        flags: WdFlags(
                            BUILTIN,
                        ),
                    },
                },
                Tk {
                    tk_type: String,
                    wd: WordDesc {
                        text: "hello",
                        span: Span {
                            start: 5,
                            end: 10,
                        },
                        flags: WdFlags(
                            IS_ARG,
                        ),
                    },
                },
                Tk {
                    tk_type: String,
                    wd: WordDesc {
                        text: "world",
                        span: Span {
                            start: 11,
                            end: 16,
                        },
                        flags: WdFlags(
                            IS_ARG,
                        ),
                    },
                },
            ],
        },
        span: Span {
            start: 0,
            end: 16,
        },
        flags: NdFlags(
            VALID_OPERAND,
        ),
        redirs: [],
    },
]
