src/interp/snapshots/rsh__interp__parse__test__parser_while_loop.snap
---
source: src/interp/parse.rs
expression: flat_nodes
---
[
    Node {
        command: None,
        nd_type: Loop {
            condition: true,
            logic: Conditional {
                condition: Node {
                    command: None,
                    nd_type: Root {
                        deck: [
                            Node {
                                command: Some(
                                    Tk {
                                        tk_type: Ident,
                                        wd: WordDesc {
                                            text: "true",
                                            span: Span {
                                                start: 6,
                                                end: 10,
                                            },
                                            flags: WdFlags(
                                                0x0,
                                            ),
                                        },
                                    },
                                ),
                                nd_type: Command {
                                    argv: [
                                        Tk {
                                            tk_type: Ident,
                                            wd: WordDesc {
                                                text: "true",
                                                span: Span {
                                                    start: 6,
                                                    end: 10,
                                                },
                                                flags: WdFlags(
                                                    0x0,
                                                ),
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 6,
                                    end: 10,
                                },
                                flags: NdFlags(
                                    VALID_OPERAND,
                                ),
                                redirs: [],
                            },
                        ],
                    },
                    span: Span {
                        start: 6,
                        end: 0,
                    },
                    flags: NdFlags(
                        0x0,
                    ),
                    redirs: [],
                },
                body: Node {
                    command: None,
                    nd_type: Root {
                        deck: [
                            Node {
                                command: Some(
                                    Tk {
                                        tk_type: Ident,
                                        wd: WordDesc {
                                            text: "echo",
                                            span: Span {
                                                start: 14,
                                                end: 18,
                                            },
                                            flags: WdFlags(
                                                BUILTIN,
                                            ),
                                        },
                                    },
                                ),
                                nd_type: Builtin {
                                    argv: [
                                        Tk {
                                            tk_type: Ident,
                                            wd: WordDesc {
                                                text: "echo",
                                                span: Span {
                                                    start: 14,
                                                    end: 18,
                                                },
                                                flags: WdFlags(
                                                    BUILTIN,
                                                ),
                                            },
                                        },
                                        Tk {
                                            tk_type: String,
                                            wd: WordDesc {
                                                text: "hi",
                                                span: Span {
                                                    start: 19,
                                                    end: 21,
                                                },
                                                flags: WdFlags(
                                                    IS_ARG,
                                                ),
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 14,
                                    end: 21,
                                },
                                flags: NdFlags(
                                    VALID_OPERAND,
                                ),
                                redirs: [],
                            },
                        ],
                    },
                    span: Span {
                        start: 14,
                        end: 0,
                    },
                    flags: NdFlags(
                        0x0,
                    ),
                    redirs: [],
                },
            },
        },
        span: Span {
            start: 0,
            end: 26,
        },
        flags: NdFlags(
            VALID_OPERAND,
        ),
        redirs: [],
    },
]
